--- a/.github/workflows/containers.yml
+++ b/.github/workflows/containers.yml
@@ -122,8 +122,8 @@ jobs:
           done
           echo "::endgroup::"
 
-          if [${{ github.event_name == 'push' }}]; then
-            NEXT_STEP_TITLE="and Publish "
+          if ${{ github.event_name == 'push' }}; then
+            NEXT_STEP_TITLE+="and Publish"
           fi
 
           echo "NEXT_STEP_TITLE >>> $NEXT_STEP_TITLE"
@@ -141,7 +141,7 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build ${{ steps.prepare.outputs.build_title }}- ${{ matrix.service }}
+    - name: Build ${{ steps.prepare.outputs.build_title }} - ${{ matrix.service }}
       if: success()
       uses: docker/build-push-action@v2
       with:
