storefront: nginx removed user. Using unprivileged

--- a/src/storefront/nginx/nginx.conf
+++ b/src/storefront/nginx/nginx.conf
@@ -1,4 +1,4 @@
-user  nginx;
+# user  nginx; # the "user" directive makes sense only if the master process runs with super-user privileges
 worker_processes  1;
 
 error_log  /var/log/nginx/error.log warn;
