--- a/deploy/complete/helm-chart/mushop/templates/ingress-edge.yaml
+++ b/deploy/complete/helm-chart/mushop/templates/ingress-edge.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.ingress.enabled }}
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ include "mushop.fullname" . }}
@@ -21,19 +21,25 @@ spec:
       http:
         paths:
         - path: /
+          pathType: Prefix
           backend:
             # intentionally w/o .Release.Name for metrics workshop
-            serviceName: edge
-            servicePort: {{ $.Values.edge.service.port }}
+            service:
+              name: edge
+              port:
+                number: {{ $.Values.edge.service.port }}
     {{- end -}}
     {{ else }}
     - http:
         paths:
         - path: /
+          pathType: Prefix
           backend:
             # intentionally w/o .Release.Name for metrics workshop
-            serviceName: edge
-            servicePort: {{ .Values.edge.service.port }}
+            service:
+              name: edge
+              port:
+                number: {{ $.Values.edge.service.port }}
     {{- end -}}
   {{- if .Values.ingress.tls }}
   tls:
