values-test.yaml clusterIssuer fix

--- a/deploy/complete/helm-chart/mushop/values-test.yaml
+++ b/deploy/complete/helm-chart/mushop/values-test.yaml
@@ -15,7 +15,7 @@ ingress:
 
   # Value can be either prod or staging
   # This controls the cluster issuer what's used in Ingress
-  clusterIssuer: prod
+  clusterIssuer: letsencrypt-staging
 
   # Used for ACME registration (if TLS is set)
   email: "no-reply@ateam-oracle.com"
