cluster certificate issuer selfsigned option

--- a/deploy/complete/helm-chart/mushop/templates/cluster-issuers.yaml
+++ b/deploy/complete/helm-chart/mushop/templates/cluster-issuers.yaml
@@ -41,7 +41,7 @@ spec:
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: {{ include "mushop.fullname" . }}-selfsigning
+  name: {{ include "mushop.fullname" . }}-selfsigned
 spec:
   selfSigned: {}
 {{- end -}}
