complete: schema update for ingress

--- a/deploy/complete/terraform/schema.yaml
+++ b/deploy/complete/terraform/schema.yaml
@@ -71,12 +71,25 @@ variableGroups:
     - create_vault_policies_for_group
     - user_admin_group_for_vault_policy
 
-  - title: "Cluster Utilities (MuShop Utilities)"
+  - title: "Cluster Utilities (MuShop Utilities) - Ingress"
+    variables:
+    - ingress_nginx_enabled
+    - ingress_load_balancer_shape
+    - ingress_load_balancer_shape_flex_min
+    - ingress_load_balancer_shape_flex_max
+    - ingress_hosts
+    - cert_manager_enabled
+    - ingress_tls
+    - ingress_cluster_issuer
+    - ingress_email_issuer
+    visible:
+      and:
+        - show_advanced
+
+  - title: "Cluster Utilities (MuShop Utilities) - Other"
     variables:
     - grafana_enabled
     - prometheus_enabled
-    - ingress_nginx_enabled
-    - cert_manager_enabled
     - metrics_server_enabled
     - catalog_enabled
     visible:
@@ -153,10 +166,10 @@ variables:
 
   # MuShop
   mushop_mock_mode_all:
-    visible: yes
     type: boolean
-    required: true
     title: "Enable Mock Mode (If enabled, does NOT provision ATP Database, Streaming or Object Storage)"
+    required: true
+    visible: yes
 
   # OKE Cluster
   create_new_oke_cluster:
@@ -371,8 +384,8 @@ variables:
 
   image_operating_system_version:
     type: string
-    required: true
     title: "Image OS Version"
+    required: true
     visible:
       and:
         - create_new_oke_cluster
@@ -389,8 +402,8 @@ variables:
 
   existent_dynamic_group_for_nodes_in_compartment:
     type: string
-    required: true
     title: "Existent Dynamic Group"
+    required: true
     visible:
       and:
         - and:
@@ -469,6 +482,102 @@ variables:
         - create_new_encryption_key
         - create_vault_policies_for_group
 
+  # Cluster Utilities - Ingress
+  ingress_nginx_enabled:
+    type: boolean
+    title: "Ingress NGINX"
+
+  ingress_load_balancer_shape:
+    type: enum
+    enum:
+    - "flexible"
+    - "10Mbps"
+    - "100Mbps"
+    - "400Mbps"
+    - "8000Mbps"
+    title: "Select a shape for the load balancer created by the Ingress"
+    visible:
+      and:
+        - show_advanced
+        - ingress_nginx_enabled
+
+  ingress_load_balancer_shape_flex_min:
+    type: integer
+    minimum: 10
+    maximum: 8000
+    title: "Choose the minimum bandwidth"
+    required: true
+    visible:
+      and:
+        - and:
+          - show_advanced
+          - ingress_nginx_enabled
+        - eq:
+          - ingress_load_balancer_shape 
+          - "flexible"
+
+  ingress_load_balancer_shape_flex_max:
+    type: integer
+    minimum: 10
+    maximum: 8000
+    title: "Choose the maximum bandwidth"
+    required: true
+    visible:
+      and:
+        - and:
+          - show_advanced
+          - ingress_nginx_enabled
+        - eq:
+          - ingress_load_balancer_shape 
+          - "flexible"
+
+  ingress_hosts:
+    type: string
+    title: "Optional valid domain name"
+    visible:
+      and:
+        - show_advanced
+        - ingress_nginx_enabled
+
+  cert_manager_enabled:
+    type: boolean
+    title: "Certificate Management"
+
+  ingress_tls:
+    type: boolean
+    title: "Use TLS to enable HTTPS on the valid domain name"
+    visible:
+      and:
+        - show_advanced
+        - ingress_nginx_enabled
+        - cert_manager_enabled
+
+  ingress_cluster_issuer:
+    type: enum
+    enum:
+    - "letsencrypt-prod"
+    - "letsencrypt-staging"
+    - "selfsigned"
+    title: "Certificate Issuer"
+    required: true
+    visible:
+      and:
+        - show_advanced
+        - ingress_nginx_enabled
+        - ingress_tls
+        - cert_manager_enabled
+
+  ingress_email_issuer:
+    type: string
+    title: "Certificate Issuer Email"
+    required: true
+    visible:
+      and:
+        - show_advanced
+        - ingress_nginx_enabled
+        - ingress_tls
+        - cert_manager_enabled
+
   # Cluster Utilities
   grafana_enabled:
     type: boolean
@@ -481,14 +590,6 @@ variables:
   metrics_server_enabled:
     type: boolean
     title: "Metrics Server"
-
-  ingress_nginx_enabled:
-    type: boolean
-    title: "Ingress NGINX"
-
-  cert_manager_enabled:
-    type: boolean
-    title: "Certificate Management"
 
   catalog_enabled:
     type: boolean
