--- a/deploy/complete/helm-chart/mushop/charts/catalogue/templates/catalogue-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/catalogue/templates/catalogue-deployment.yaml
@@ -28,12 +28,12 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          command: ["/app"]
+          command: ["/app/catalogue"]
           args:
-          - -port=80
+          - -port=8080
           ports:
             - name: http
-              containerPort: 80
+              containerPort: 8080
           env:
             - name: ZIPKIN
               value: {{ .Values.env.zipkin }}
