payment: port definition update

--- a/deploy/complete/helm-chart/mushop/charts/payment/templates/payment-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/payment/templates/payment-deployment.yaml
@@ -31,13 +31,13 @@ spec:
           livenessProbe:
             httpGet:
               path: /health
-              port: 8080
+              port: http
             initialDelaySeconds: 120
             periodSeconds: 10
           readinessProbe:
             httpGet:
               path: /health
-              port: 8080
+              port: http
             initialDelaySeconds: 10
             periodSeconds: 5
           resources:
